[project]
name = "cisco-conf-helper"
version = "0.1.0"
description = "Back up Cisco configs over serial"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["dacite>=1.9.2", "netmiko>=4.6.0"]

[project.scripts]
cisco-conf-helper = "cisco_conf_helper.cli:main"

[dependency-groups]
dev = ["ruff>=0.15.12"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP046"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cisco_conf_helper*"]
exclude = ["backups*", "test*"]
